Refactor: LogService